# bpk_scrapper

./: .gitignore  ARCHITECTURE.md  PDF_EXTRACTION_GUIDE.md  QUICK_START_EXTRACTION.md  README.md  db_to_csv.py  db_to_csv_optimized.py  generate_state_from_log.py  main.py  main_unified.py  pdf_text_extractor.py  pyproject.toml  requirements.txt  update_bpk_state.py
.claude/: settings.local.json
csv_output/: perda_perda.csv  perda_scraping_log.csv  perda_worker_0_perda.csv  perda_worker_0_scraping_log.csv  perda_worker_1_perda.csv  perda_worker_1_scraping_log.csv  perda_worker_2_perda.csv  perda_worker_2_scraping_log.csv  perda_worker_3_perda.csv  perda_worker_3_scraping_log.csv  perda_worker_4_perda.csv  perda_worker_4_scraping_log.csv  perda_worker_5_perda.csv  perda_worker_5_scraping_log.csv  perda_worker_6_perda.csv  perda_worker_6_scraping_log.csv  perda_worker_7_perda.csv  perda_worker_7_scraping_log.csv  perda_worker_8_perda.csv  perda_worker_8_scraping_log.csv  perda_worker_9_perda.csv  perda_worker_9_scraping_log.csv
src/: database.py  main.py  scraper_enhanced.py
src/config/: __init__.py  bpk_config.py  peraturan_go_id_config.py
src/core/: __init__.py  base_scraper.py
src/scrapers/: __init__.py  bpk_scraper.py  peraturan_go_id_scraper.py
