[project]
name = "scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1",
    "beautifulsoup4>=4.12.0",
    "cachetools>=5.3.2",
    "fake-useragent>=1.4.0",
    "lxml>=5.1.0",
    "pdfplumber>=0.10.0",
    "pypdf2>=3.0.0",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0",
    "tenacity>=8.2.3",
    "tqdm>=4.66.0",
]
